# gestion-cinema

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  cinema.db  docker-compose.local.yml  pyproject.toml  seances_data.py
alembic/: env.py
alembic/versions/: 2f0988fc4261_move_source_to_summary.py  37e06c3283a8_create_table_film_and_user.py  4ebdafcc6ad6_move_source_to_summary_to.py  b43de229e99a_move_source_to_summary.py  ff3e7e9ab53a_move_source_to_summary_and_optionnal_id.py
app/: film_data.py  main.py  seances_data.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: film.py
app/core/: config.py
app/crud/: __init__.py  crud_film.py  crud_seances.py
app/db/: base.py  init_db.py  session.py
app/models/: film.py  seances.py  user.py
app/schemas/: __init__.py  film.py  seances.py  user.py
app/templates/: index.html
films/: Dockerfile
films/app/: README.md  pyproject.toml
films/app/alembic/: env.py
films/app/app/api/: deps.py
films/app/app/api/api_v1/endpoints/: reservation.py
reservation-service/: README.md  pyproject.toml
reservation-service/app/crud/: reservation_crud
reservation-service/app/models/: reservation.py
reservation-service/app/schemas/: reservation_schema.py
