[tool.poetry]
name = "reservation-service"
version = "0.1.0"
description = "interface permettant a un utilisateur de faire une reservation"
authors = ["thierryray"]
readme = "README.md"
packages = [{include = "reservation_service"}]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.22.0"
fastapi = "^0.98.0"
jose = "^1.0.0"
alembic = "^1.11.1"
jwt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
